Fix EAS local build and update build numbers
- Remove --env-file flag from eas build command (not supported)
- Fix RevenueCat API key passing to EAS local builds
- Update build numbers: iOS 19→18, Android 12→13
- Improve workflow quality checks and error handling
- Add revenueCat debug logging enhancements

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -179,8 +179,9 @@ jobs:
 
           # Now run the actual build with build-specific filename
           echo "Starting EAS build..."
+          # The .env file is already created and REVENUECAT_API_KEY is in the environment
           REVENUECAT_API_KEY=${{ secrets.REVENUECAT_API_KEY }} \
-          eas build --platform ios --profile production --local --non-interactive --output=./app-ios-build-${BUILD_NUMBER}.ipa --env-file .env || {
+          eas build --platform ios --profile production --local --non-interactive --output=./app-ios-build-${BUILD_NUMBER}.ipa || {
             echo "EAS build failed - check the logs above for details"
             exit 1
           }
