--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -224,7 +224,9 @@ jobs:
           # Now run the actual build with build-specific filename
           echo "Starting EAS build..."
           # The .env file is already created and REVENUECAT_API_KEY is in the environment
-          REVENUECAT_API_KEY=${{ secrets.REVENUECAT_API_KEY }} \
+          # Export the variable so the prebuildCommand can access it
+          export REVENUECAT_API_KEY
+          echo "REVENUECAT_API_KEY=$REVENUECAT_API_KEY" >> $GITHUB_ENV
           eas build --platform ios --profile production --local --non-interactive --output=./app-ios-build-${BUILD_NUMBER}.ipa || {
             echo "EAS build failed - check the logs above for details"
             exit 1
